# rzd

./: .gitignore  README.md  pyproject.toml
rzd/models/: datamodule.py  dataset.py  litmodel.py  predict.py  sandbox.py  utils.py
rzd/notebooks/: RZD_baseline.ipynb  baseline.ipynb  rzd228 (1).ipynb  rzd228 (2).ipynb  rzd228 (3).ipynb  rzd228.ipynb
