[tool.poetry]
name = "rzd"
version = "0.1.0"
description = ""
authors = ["tommyqamaz <solgrini@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
opencv-python = "^4.6.0"
torch = "^1.12.0"
albumentations = "^1.2.1"
tqdm = "^4.64.0"
pytorch-lightning = "^1.6.5"
segmentation-models-pytorch = "^0.2.1"
wandb = "^0.12.21"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
matplotlib = "^3.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
